# grafica-ide

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/lang-spec/: gnx_language_spec.md  gnx_language_spec.typ
src/: app.rs  main.rs  ribbon.rs  settings.rs  state.rs  system_info.rs  tabs.rs  theme.rs
src/panels/: canvas.rs  mod.rs  project.rs  settings.rs
